# WalletCoreFFI

./: .gitignore  Package.swift  README.md
.github/workflows/: build.yml  release.yml
Artifacts/MoneroWalletCore.xcframework/: Info.plist
Artifacts/MoneroWalletCore.xcframework/ios-arm64/Headers/: monerowalletcore.h
Artifacts/MoneroWalletCore.xcframework/macos-arm64_x86_64/Headers/: module.modulemap  monerowalletcore.h
Artifacts/WalletCore.xcframework/: Info.plist
CLibMoneroWalletCore/: module.modulemap  monerowalletcore.h  walletcore.h
Scripts/: build_xcframework.sh  install_linux.sh
Sources/MoneroWalletCoreFFI/: MoneroWalletCoreFFI.swift
Utilities/Smoke/: main.swift
monero-oxide-output/: Cargo.toml
monero-oxide-output/src/: lib.rs
