[package]
name = "walletcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "monerowalletcore"
crate-type = ["cdylib", "staticlib"]



[dependencies]
monero-wallet = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-wallet", features = ["std"] }
monero-seed = { git = "https://github.com/monero-oxide/monero-wallet-util", package = "monero-seed", features = ["std"] }
monero-address = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-address", features = ["std"] }
monero-ed25519 = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-ed25519", features = ["std"] }
sha3 = { version = "0.10", default-features = false, features = ["std"] }
zeroize = { version = "1.5", default-features = false, features = ["zeroize_derive", "std"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
monero-io = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-io", features = ["std"] }
monero-epee = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-epee" }



# Buf/BufMut traits used by cuprate-epee-encoding helpers in our debug tooling
bytes = "1"

# Portable storage (EPEE) encoder used to correctly construct monerod *.bin request bodies
# (e.g. /get_blocks_by_height.bin) instead of hand-rolling the binary format.
cuprate-epee-encoding = { git = "https://github.com/Cuprate/cuprate", package = "cuprate-epee-encoding" }

once_cell = "1.19"
ureq = { version = "2", features = ["tls", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[target.'cfg(not(any(target_os = "ios", target_os = "tvos", target_os = "watchos")))'.dependencies]
zmq = "0.10"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"



[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
